--- a/templates/base.html
+++ b/templates/base.html
@@ -26,19 +26,19 @@
                 <li><a href="#">Games</a></li>
                 <li><a href="#">Log Out</a></li>
                 <li><a href="#">Log In</a></li>
-                <li><a href="#">Register</a></li>
+                <li><a href="{{ url_for('register') }}">Register</a></li>
               </ul>
             </div>
           </nav>
         
           <!-- mobile sidenav  -->
-          <ul class="sidenav red darken-3" id="mobile-demo">
-            <li><h4 class="center-align">Game Review</h4></li>
-            <li><a href="{{ url_for('get_games') }}">Home</a></li>
-            <li><a href="#">Games</a></li>
-            <li><a href="#">Log Out</a></li>
-            <li><a href="#">Log In</a></li>
-            <li><a href="#">Register</a></li>
+          <ul class="sidenav grey darken-3" id="mobile-demo">
+            <li><h4 class="center-align white-text">Game Review</h4></li>
+            <li><a class="white-text" href="{{ url_for('get_games') }}">Home</a></li>
+            <li><a class="white-text" href="#">Games</a></li>
+            <li><a class="white-text" href="#">Log Out</a></li>
+            <li><a class="white-text" href="#">Log In</a></li>
+            <li><a class="white-text" href="{{ url_for('register') }}">Register</a></li>
           </ul>
     </header>
 
