--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2 class="center-align">Register</h2>
+    <h2 class="center-align">Log In</h2>
 
     <div class="row">
-        <form class="col s12 m10 offset-m1" method="POST" action="{{ url_for('register') }}">
+        <form class="col s12 m10 offset-m1" method="POST" action="{{ url_for('login') }}">
             <div class="card-panel grey darken-4">
                 <!-- username input -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <i class="material-icons prefix white-text">person_add</i>
+                        <i class="material-icons prefix white-text">person</i>
                         <input id="username" name="username" type="text" minlength="5" maxlength="15"
                             pattern="^[a-zA-Z0-9]{5,15}$" class="validate white-text" required>
                         <label for="username">Username</label>
@@ -27,7 +27,7 @@
                 <!-- submit button -->
                 <div class="row center-align">
                     <button class="btn waves-effect red darken-3" type="submit" name="action">
-                        Register
+                        Log In
                         <i class="material-icons right">send</i>
                     </button>
                 </div>
@@ -35,12 +35,12 @@
         </from>
     </div>
 
-    <!-- link to log in -->
+    <!-- link to register account -->
     <div class="row">
         <div class="col s12">
             <p class="center-align">
-                Already have an account? 
-                <a href="{{ url_for('login') }}" class="light-blue-text">Log In</a>
+                New To Game Review? 
+                <a href="{{ url_for('register') }}" class="light-blue-text">Register Account</a>
             </p>
         </div>
     </div>
