--- a/templates/games.html
+++ b/templates/games.html
@@ -1,13 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-    {% for game in games %}
-        {{ game.release_date }}<br>
-        {{ game.game_genre }}<br>
-        {{ game.num_of_players }}<br>
-        {{ game.game_developers }}<br>
-        {{ game.game_platforms }}<br>
-        {{ game.game_description }}<br>
-    {% endfor %}
+    <h2 class="center-align">Games</h2>
+
+    
 
 {% endblock %}
