--- a/templates/games.html
+++ b/templates/games.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2 class="center-align">Games</h2>
-
-    
+    <h2 class="center-align">Latest Games</h2>    
 
 {% endblock %}
