--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,44 @@
     
     <div class="main-image">
         <img src="https://i.redd.it/m0tjpazeuj611.jpg" alt="">
-    </div>    
+    </div>
+
+    <div class="container">
+        <h2 class="center-align header">Most Popular Games</h2>
+
+        <div class="row">
+            <div class="col s12 m6 l4">
+                <img class="game-tile" src="https://www.callofduty.com/content/dam/atvi/callofduty/cod-touchui/warzone/common/social-share/social-share-zeus-s4-wz.jpg" alt="">
+                <p class="white-text">Game Tile</p>
+            </div>
+            <div class="col s12 m6 l4">
+                <img class="game-tile" src="https://i.stack.imgur.com/dqVlX.png" alt="">
+                <p class="white-text">Game Tile</p>
+            </div>
+            <div class="col s12 m6 l4">
+                <img class="game-tile" src="https://animal-crossing.com/new-horizons/assets/img/share-tw.jpg" alt="">
+                <p class="white-text">Game Tile</p>
+            </div>
+            <div class="col s12 m6 l4">
+                <img class="game-tile" src="https://meups.com.br/wp-content/uploads/2015/03/Grand-Theft-Auto-V.jpg" alt="">
+                <p class="white-text">Game Tile</p>
+            </div>
+            <div class="col s12 m6 l4">
+                <img class="game-tile" src="https://cdn1.dotesports.com/wp-content/uploads/2019/09/12195522/league-of-legends.jpg" alt="">
+                <p class="white-text">Game Tile</p>
+            </div>
+            <div class="col s12 m6 l4">
+                <img class="game-tile" src="https://xboxplay.games/uploadStream/15450.jpg" alt="">
+                <p class="white-text">Game Tile</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row center-align">
+        <button class="btn waves-effect red darken-3 more-games-btn" type="submit" name="action">
+            More Games
+            <i class="material-icons right">send</i>
+        </button>
+    </div>
 
 {% endblock %}
