--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,40 @@
 {% block content %}
     
     <div class="main-image">
-        <img src="https://i.redd.it/m0tjpazeuj611.jpg" alt="">
+        <img src="https://i.redd.it/m0tjpazeuj611.jpg" alt="">        
+    </div>
+
+    <div class="row">
+        <div class="col s12 m5 offset-m1 l4 offset-l2 top-left white-text center-align">
+            <h4>Welcome To Game Review</h4>
+            <p class="white-text">
+                THIS SITE IS DESIGNED FOR PEOPLE WHO LOVE PLAYING
+                VIDEOGAMES. HERE YOU CAN CHECK OUT THE MOST
+                POPULAR AND ROCOMMENDED GAMES,
+                BY YOU!
+                ARE IN THE WORLD RIGHT NOW!
+            </p>
+            <ul>
+                <li class="white-text">
+                    Sign up today
+                </li>
+                <li class="white-text">
+                    Leave reviews and tips on your favourite games
+                </li>
+                <li class="white-text">
+                    See what other gamers are saying
+                </li>
+                <li class="white-text">
+                    Connect with others
+                </li>
+            </ul>
+            <div class="row center-align">
+                <button class="btn waves-effect red darken-3 register-btn" type="submit" name="action">
+                    Register
+                    <i class="material-icons right">send</i>
+                </button>
+            </div>
+        </div>
     </div>
 
     <div class="container">
