--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,7 @@
     <!-- link to register account -->
     <div class="row">
         <div class="col s12">
-            <p class="center-align">
+            <p class="center-align white-text">
                 New To Game Review? 
                 <a href="{{ url_for('register') }}" class="light-blue-text">Register Account</a>
             </p>
