--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,10 +11,16 @@ body {
     padding: 1px;
 }
 
+nav {
+    border-bottom: 1px solid #fafafa;
+}
+
 .main-image {
-    width:85%;
+    position: relative;
+    width:70%;
     height:500px;
     margin: auto;
+    text-align: center;
 }
 
 img {
@@ -22,10 +28,22 @@ img {
     height:100%;
 }
 
+.top-left {
+    position: absolute;
+    top: 100px;    
+}
+
+.register-btn {
+    margin: 20px;
+}
+
+.row {
+    margin-bottom: 0;
+}
+
 .header {
     color: rgba(83, 82, 82, 1);
-    margin: 0;
-    padding: 40px;
+    margin: 40px;
     letter-spacing: 3px;
 }
 
@@ -40,4 +58,36 @@ p {
 
 .more-games-btn {
     margin: 40px;
+}
+
+/* media queries */
+
+@media (max-width: 992px) {
+    .main-image {
+        width: 100%;
+        height: 450px;
+    }
+
+    .top-left {
+        top: 80px;
+    }
+}
+
+@media (max-width: 576px) {
+    .main-image {
+        position: static;
+        width: 100%;
+        height: 375px;
+    }
+
+    .top-left {
+        border-bottom: 1px solid #fafafa;
+        border-top: 1px solid #fafafa;
+        position: static;
+    }
+
+    .header {
+        margin: 25px;
+        letter-spacing: 2px;
+    }
 }
