--- a/templates/register.html
+++ b/templates/register.html
@@ -38,7 +38,7 @@
     <!-- link to log in -->
     <div class="row">
         <div class="col s12">
-            <p class="center-align">
+            <p class="center-align white-text">
                 Already have an account? 
                 <a href="{{ url_for('login') }}" class="light-blue-text">Log In</a>
             </p>
