--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,8 @@
               <a href="{{ url_for('get_games') }}" class="brand-logo left">Game Review</a>
               <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="large material-icons">menu</i></a>
               <ul class="right hide-on-med-and-down">
-                <li><a href="{{ url_for('get_games') }}">Home</a></li>
-                <li><a href="#">Games</a></li>
+                <li><a href="{{ url_for('home') }}">Home</a></li>
+                <li><a href="{{ url_for('get_games') }}">Games</a></li>
                 {% if session.user %}
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                 {% else %}
@@ -39,8 +39,8 @@
           <!-- mobile sidenav  -->
           <ul class="sidenav grey darken-3" id="mobile-demo">
             <li><h4 class="center-align white-text">Game Review</h4></li>
-            <li><a class="white-text" href="{{ url_for('get_games') }}">Home</a></li>
-            <li><a class="white-text" href="#">Games</a></li>
+            <li><a class="white-text" href="{{ url_for('home') }}">Home</a></li>
+            <li><a class="white-text" href="{{ url_for('get_games') }}">Games</a></li>
             {% if session.user %}
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
@@ -62,7 +62,10 @@
             {% endif %}
         {% endwith %}
     </section>
-        
+
+        {% block home_content %}
+        {% endblock %}
+
         {% block content %}
         {% endblock %}
 
