--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
     <h2 class="center-align">Register</h2>
 
     <div class="row">
-        <form class="col s12 m10 offset-m1" method="POST" action="{{ url_for('register') }}">
+        <form class="col s12 m10 l8 offset-m1 offset-l2" method="POST" action="{{ url_for('register') }}">
             <div class="card-panel grey darken-4">
                 <!-- username input -->
                 <div class="row">
