--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         <div class="navbar-fixed">
             <nav class="nav-extended black">
             <div class="nav-wrapper">
-              <a href="{{ url_for('get_games') }}" class="brand-logo left">Game Review</a>
+              <a href="{{ url_for('home') }}" class="brand-logo left">Game Review</a>
               <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="large material-icons">menu</i></a>
               <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('home') }}">Home</a></li>
