Add more games to list on index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,20 +77,37 @@
             </div>
 
             <div class="col s12 m6 l4 game-tile">
+                <img class="game-img" src="https://api.cdkeybay.com/static/2209852790ea3ac20b4a7c58.jpg" alt="">
+                <p class="game-title white-text">7. genshin impact</p>
+            </div>
+
+            <div class="col s12 m6 l4 game-tile">
+                <img class="game-img" src="https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/clans/36805194/4dc4076d2fa3e464d35767ac154df11d3df7b302.jpg" alt="">
+                <p class="game-title white-text">8. outriders</p>
+            </div>
+
+            <div class="col s12 m6 l4 game-tile">
+                <img class="game-img" src="https://cdn.cloudflare.steamstatic.com/steam/apps/892970/capsule_616x353.jpg?t=1617258628" alt="">
+                <p class="game-title white-text">9. valheim</p>
+            </div>
+
+            <div class="col s12 m6 l4 game-tile">
                 <img class="game-img" src="https://static.bhphotovideo.com/explora/sites/default/files/styles/top_shot/public/ts-apex-legends-free-to-play-battle-royale_0.jpg?itok=mISX6TSE" alt="">
-                <p class="game-title white-text">7. apex legends</p>
+                <p class="game-title white-text">10. apex legends</p>
             </div>
 
             <div class="col s12 m6 l4 game-tile">
                 <img class="game-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRhUvB75XlgiB1FlY6DSMkILKVJTomgcJwpWwklM7F9kcmPppbDmKKjHawKHil1fYChWKc&usqp=CAU" alt="">
-                <p class="game-title white-text">8. fortnite</p>
+                <p class="game-title white-text">11. fortnite</p>
             </div>
 
             <div class="col s12 m6 l4 game-tile">
                 <img class="game-img" src="https://www.futuregamereleases.com/wp-content/uploads/2020/09/Assassins-Creed-Valhalla-release-date-october.jpg" alt="">
-                <p class="game-title white-text">9. assassin's creed valhalla</p>
+                <p class="game-title white-text">12. assassin's creed valhalla</p>
             </div>
         </div>
+        
+
 
 
         <!-- game tiles -->
