--- a/templates/games.html
+++ b/templates/games.html
@@ -1,23 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <div class="game-container center-align">
-
-        <h2 class="center-align header">Games</h2>
+    <div class="row">
+        <div class="col s12 m10 l10 offset-l1 offset-m1">
+            <h4 class="header white-text">Games</h4>
+        </div>
+    </div>
         
-        <div class="row">
+    <div class="row">
+        <div class="col s12 m10 l10 offset-l1 offset-m1">
             {% for game in games %}
-            
-                <div class="col s12 m6 l4 game-tile">
-                    <img class="game-img" src="{{ game.game_url }}" alt="">
-                    <p class="game-title white-text">{{ game.game_title }}</p>
+                
+            <div class="col s12 m6 l4">
+                <div class="card grey darken-4">
+                <div class="card-image">
+                    <img src="{{ game.game_url }}">
                 </div>
-            
+                <div class="card-content white-text">
+                    <p>
+                        {{ game.game_title }}
+                    </p>
+                </div>
+                </div>
+            </div>    
+                
             {% endfor %}
         </div>
-        
-    </div>
-    
-    
+    </div>    
 
 {% endblock %}
